tests/snapshots/compute_rules__compute_rules@permissive.snap
---
source: tests/compute_rules.rs
info:
  bundle_name: permissive
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: Keep
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
    rules_display_style: BindingMode
---
p0 @ q.0: T0, p1 @ q.1: T1
-------------------------- "Constructor"
[p0, p1] @ q: [T0, T1]

p0 @ &(*q).0: &T0, p1 @ &(*q).1: &T1
------------------------------------ "ConstructorRef"
[p0, p1] @ q: &[T0, T1]

p0 @ &mut (*q).0: &mut T0, p1 @ &mut (*q).1: &mut T1
---------------------------------------------------- "ConstructorRef"
[p0, p1] @ q: &mut [T0, T1]

[p0, p1] @ *q: &T
----------------- "ConstructorMultiRef"
[p0, p1] @ q: &&T

[p0, p1] @ &**q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &&mut T

[p0, p1] @ *q: &T
--------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &T

[p0, p1] @ &mut **q: &mut T
--------------------------- "ConstructorMultiRef"
[p0, p1] @ q: &mut &mut T

p @ *q: T
---------- "Deref(EatOuter)"
&p @ q: &T

p @ *q: T
------------------ "Deref(EatOuter)"
&mut p @ q: &mut T

&p @ &*q: &T
-------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ q: &mut T, binding_mode(q) = move

&p @ &*q: &T
----------------------------------------- "DerefMutWithShared(EatOuter)"
&p @ q: &mut T, binding_mode(q) = ref mut

x @ &q: &T
------------ "BindingBorrow"
ref x @ q: T

x @ &mut q: &mut T
------------------ "BindingBorrow"
ref mut x @ q: T

let x: T = q
------------ "Binding"
x @ q: T

let mut x: T = q
---------------- "Binding"
mut x @ q: T

p @ p: T
-------------- "ExprSimplification"
p @ *&mut p: T
